// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits accepts a custom className 1`] = `
<div
  className="cvi-InfiniteHits MyCustomInfiniteHits"
>
  <ul
    className="cvi-InfiniteHits-list"
  >
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":0}
      </div>
    </li>
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":1}
      </div>
    </li>
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":2}
      </div>
    </li>
  </ul>
  <button
    className="cvi-InfiniteHits-loadMore cvi-InfiniteHits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;

exports[`InfiniteHits accepts a hitComponent prop 1`] = `
<div
  className="cvi-InfiniteHits"
>
  <ul
    className="cvi-InfiniteHits-list"
  >
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":0}
      </div>
    </li>
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":1}
      </div>
    </li>
    <li
      className="cvi-InfiniteHits-item"
    >
      <div>
        {"id":2}
      </div>
    </li>
  </ul>
  <button
    className="cvi-InfiniteHits-loadMore cvi-InfiniteHits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;
